# android-meetup-ndk-area

./: .gitignore  README.md
Application/: build.gradle
Application/src/main/cpp/: AreaCalculator.cpp  AreaCalculator.h  CMakeLists.txt  hello-jni.c  hello-jni.cpp  hello-jnicallback.c
Application/src/main/java/com/example/android/camera2basic/: Camera2BasicFragment.java  CameraActivity.java  ImageProcessor.java  ImageUtils.java  JniHandler.java
Application/src/main/res/layout/: fragment_camera2_basic.xml
openCVLibrary310/: build.gradle
